<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="600dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/movetoward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movetoward"/>
            <Button
                android:text="@string/moveback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moveback"/>
            <Button
                android:text="@string/moveleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moveleft"/>
            <Button
                android:text="@string/moveright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moveright"/>

            <TextView
                android:text="@string/setvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"/>
        </LinearLayout>

        <TextView
            android:text="@string/setself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tbspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"/>
            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:id="@+id/inputx"/>

            <TextView
                android:text="@string/lrspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:id="@+id/inputy"/>
            <Button
                android:text="@string/excute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/excute_move"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/rotationleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rotationleft"/>
            <Button
                android:text="@string/rotationright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rotationright"/>

            <TextView
                android:text="@string/setvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/setself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="转速:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:id="@+id/inputrotationspeed"/>
            <TextView
                android:text="@string/rotationhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/excute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/excute_rotate"/>
        </LinearLayout>
        <Button
            android:text="@string/stop"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/stopmove"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ScrollView
            android:id="@+id/scrollViewconsole"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:text="console"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/console"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>